--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ header{
 #servicios h2{
 	text-align:center;
 	margin-bottom:5%;
+    Color:#fff;
 }
 
 
@@ -127,9 +128,10 @@ text-align: center;
 .seccion{ padding:5% 0;}
 .titulo{
     font-family: "Agenda Bold";
-    font-size: 55px;
-    
-    text-transform: uppercase;
+    font-size: 55px!important;
+    text-align: center!important;
+    text-transform: uppercase!important;
+    margin-bottom: 3%;
 }
 
 #portafolio .main {
@@ -148,13 +150,13 @@ text-align: center;
 .row > .column {
   padding: 8px;
 }
-#cantactame{
+#contactame{
 	background-image: url("../img/contactame.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size:auto;
 	color: #fff;
-	padding: 10% 0;
+	padding: 5% 0;
 
 }
 
@@ -162,6 +164,9 @@ text-align: center;
   float: left;
   width: 25%;
   display: none; 
+}
+#portafolio a {
+ color:#fff;
 }
 #portafolio .row:after {
   content: "";
@@ -247,6 +252,7 @@ footer #copy{
 footer #info a{
 	color: #303132;
 }
+
 
 footer ul{
 	color: #fff;
